--- a/home.html
+++ b/home.html
@@ -69,11 +69,13 @@
              </button>
         </div>
         <span>
-            <h3>Sobre a casa</h3>
-            <p>Lorem ipsum dolor sit amet lorenzentti consectetur adipisicing elit. Excepturi quidem consequatur vel fugiat, culpa maxime veritatis! Illo expedita nam dolor laborum hic ipsum at, libero rem adipisci alias animi illum?</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum sed non maxime unde, quis perspiciatis illum asperiores, quidem quas pariatur consequatur facilis id quibusdam et quos neque dolores perferendis mollitia.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quam in dolores libero error qui obcaecati maxime voluptas? Quod dolorem illum adipisci incidunt corporis accusantium dolore modi eos eius ducimus.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias illo commodi esse deserunt laudantium fuga asperiores placeat, molestiae, reiciendis et laborum qui numquam doloremque consequuntur assumenda non minus voluptate magnam!</p>
+            <div class="spanArea">
+                <h3>Sobre a casa</h3>
+                <p>Lorem ipsum dolor sit amet lorenzentti consectetur adipisicing elit. Excepturi quidem consequatur vel fugiat, culpa maxime veritatis! Illo expedita nam dolor laborum hic ipsum at, libero rem adipisci alias animi illum?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum sed non maxime unde, quis perspiciatis illum asperiores, quidem quas pariatur consequatur facilis id quibusdam et quos neque dolores perferendis mollitia.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quam in dolores libero error qui obcaecati maxime voluptas? Quod dolorem illum adipisci incidunt corporis accusantium dolore modi eos eius ducimus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias illo commodi esse deserunt laudantium fuga asperiores placeat, molestiae, reiciendis et laborum qui numquam doloremque consequuntur assumenda non minus voluptate magnam!</p>
+            </div>    
         </span>
 
         <div class="row">
