--- a/equipe.html
+++ b/equipe.html
@@ -112,6 +112,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./JavaScript/jquery-3.6.0.min.js"></script>
     <script>
         $("#botao1").click(function() {
