--- a/reserve.html
+++ b/reserve.html
@@ -18,10 +18,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./home.html">Casa</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Casa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./menu.html">Menu</a>
+                        <a class="nav-link" href="./menu.html">Menun</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./equipe.html">Chefes</a>
