--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <section class="container">
         <div class="logo">
-            <h1>LUTÉCE</h1>
+            <h1>Restaurant Lutece</h1>
         </div>
         <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
             <ol class="carousel-indicators">
@@ -193,7 +193,7 @@
             </div>
         </div>
         <footer>
-            Desenvolvido por Lucas Carrilho
+            <p>Desenvolvido por Lucas Carrilho</p>
         </footer>
         <script src="JavaScript/jquery-3.6.0.min.js"></script>
         <script src="./bootstrap/js/bootstrap.min.js"></script>
