--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <title>MENU</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/style-menu.css">
+    <link rel="stylesheet" href="./css/styleMenu.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,35 +41,39 @@
             </div>
         </nav>
     </header>
-    <div class="menu-cafe">
-        <h1>CAFÉS</h1>
-        <h1>Café de la Paix</h1>
-        <p>Trata-se de um luxuoso café, coberto por colunas de mármore e lustres chamativos.<br> Foi inaugurado em 1862 e hoje seu público-alvo certamente são os turistas.</p>
-        <p>12R$</p>
-        <br>
-        <h1>Café de Flore</h1>
-        <p>Inaugurado em 1887, esta cafeteria foi projetada ao estilo Art Déco, onde grandes <br>intelectuais sentaram em suas cadeiras, como Jean-Paul Sartre.</p>
-        <p>16R$</p>
-        <br>
-        <h1>Deux Magots</h1>
-        <p>Este café, inaugurado em 1812, já recebeu nada mais, nada menos, que Pablo Picasso,<br> hoje promove prêmios de literatura que recebe o mesmo nome do café.</p>
-        <p>20R$</p>
-    </div>
-    <br>
-    <div class="menu-pratos">
-        <h1>PRATOS</h1>
-        <br>
-        <h1>Bœuf Bourguignon</h1>
-        <img src="./images/prato1.jpg" width="30%" height="30%" alt="prato1">
-        <h2>34R$</h2>
-        <p>Um prato muito tradicional e que possui receitas renovadas. Pode ser encontrado em restaurantes de cozinha mais típica.<br> Trata-se de um ensopado de carne de vaca cozida em vinho tinto e legumes. Existe também a versão de origem burguesa,<br>            o Blanquette de Veau, que é um ensopado feito à base de carne de vitela, cenoura e com molho de natas.<br> Existem ainda outros tipos de ensopados do mesmo gênero, por isso, a dica é experimentar qual vai agradar mais seu paladar.</p>
-        <h1>Quiche Lorraine</h1>
-        <img src="./images/prato2.jpg" width="30%" height="30%" alt="prato2">
-        <br>
-        <h2>32R$</h2>
-        <p>Originado na região de Lorena., na Alsácia, o Quiche Lorraine é uma "torta" feita com natas, ovos e bacon fumado. Hoje, sua<br> receita foi aprimorada e há outras versões de sabores como com cogumelos, alho francês ou frango.</p>
-        <br>
-        <br>
+    <div class="container">
+        <div class="containerMenu">
+            <div class="menuCafe">
+                <h1>CAFÉS</h1>
+                <h1>Café de la Paix</h1>
+                <p>Trata-se de um luxuoso café, coberto por colunas de mármore e lustres chamativos.<br> Foi inaugurado em 1862 e hoje seu público-alvo certamente são os turistas.</p>
+                <p>12R$</p>
+                <br>
+                <h1>Café de Flore</h1>
+                <p>Inaugurado em 1887, esta cafeteria foi projetada ao estilo Art Déco, onde grandes <br>intelectuais sentaram em suas cadeiras, como Jean-Paul Sartre.</p>
+                <p>16R$</p>
+                <br>
+                <h1>Deux Magots</h1>
+                <p>Este café, inaugurado em 1812, já recebeu nada mais, nada menos, que Pablo Picasso,<br> hoje promove prêmios de literatura que recebe o mesmo nome do café.</p>
+                <p>20R$</p>
+            </div>
+            <br>
+            <div class="menuPratos">
+                <h1>PRATOS</h1>
+                <br>
+                <h1>Bœuf Bourguignon</h1>
+                <img src="./images/prato1.jpg" width="30%" height="30%" alt="prato1">
+                <h2>34R$</h2>
+                <p>Um prato muito tradicional e que possui receitas renovadas. Pode ser encontrado em restaurantes de cozinha mais típica.<br> Trata-se de um ensopado de carne de vaca cozida em vinho tinto e legumes. Existe também a versão de origem burguesa,<br>            o Blanquette de Veau, que é um ensopado feito à base de carne de vitela, cenoura e com molho de natas.<br> Existem ainda outros tipos de ensopados do mesmo gênero, por isso, a dica é experimentar qual vai agradar mais seu paladar.</p>
+                <h1>Quiche Lorraine</h1>
+                <img src="./images/prato2.jpg" width="30%" height="30%" alt="prato2">
+                <br>
+                <h2>32R$</h2>
+                <p>Originado na região de Lorena., na Alsácia, o Quiche Lorraine é uma "torta" feita com natas, ovos e bacon fumado. Hoje, sua<br> receita foi aprimorada e há outras versões de sabores como com cogumelos, alho francês ou frango.</p>
+                <br>
+                <br>
+            </div>
+        </div>
     </div>
     <script src="JavaScript/jquery-3.6.0.min.js"></script>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
