--- a/reserve.html
+++ b/reserve.html
@@ -21,7 +21,7 @@
                         <a class="nav-link active" aria-current="page" href="./index.html">Casa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./menu.html">Menun</a>
+                        <a class="nav-link" href="./menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./equipe.html">Chefes</a>
